overflow bug fixed 2

--- a/assets/jss/nextjs-material-dashboard/New/ScheduleStyle.css
+++ b/assets/jss/nextjs-material-dashboard/New/ScheduleStyle.css
@@ -93,3 +93,7 @@
 .fc-daygrid-day-number {
   font-weight: 600;
 }
+
+thead .fc-scroller {
+  overflow: hidden !important;
+}
